--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rand-O-Mizer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom.css">
     <link rel="icon" type="image/png" href="/public/ressources/img/RickIcon.png" />
     <script src="/public/script.js" defer></script>
 </head>
